--- a/html.html
+++ b/html.html
@@ -57,6 +57,9 @@
        <button type="reset">Reset</button>
        <button type="submit">Submit</button>
        <button type="button">cancel</button>
+    </form>
+</body>
+</html>
 
 
 
