--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
     <section id="about">
         <div class="section-content">
             <h2>About Me</h2>
-            <p>I'm a <b>web development</b>  who is passionate about creating dynamic and user-friendly websites. 
+            <p>I'm a <b>web developer</b>  who is passionate about creating dynamic and user-friendly websites. 
                 I'm driven by the desire to craft high-performance web applications that enhance user experience and provide
                  seamless digital solutions. I'm dedicated to staying up to date 
                  with the latest trends and innovations in the 
@@ -144,7 +144,6 @@
                 <li>CSS</li>
                 <li>Python</li>
                 <li>Computer Organization</li>
-                <li>ML & AI</li>
                 <li>java</li>
                 <li>c++</li>
                 <li>Java script</li>
@@ -156,10 +155,9 @@
         <div class="section-content">
             <h2>Projects</h2>
             <ul>
-                <li><a href="#">E Cart website</a></li>
-                <li><a href="#">Cloud Security IBM</a></li>
-                <li><a href="#">IBM chatbot</a></li>
-                <li><a href="#">College Portal</a></li> 
+                <li><a href="#">Simple websites</a></li>
+                <li><a href="#">College Registration form</a></li>
+                <li><a href="#">Digital portfolio</a></li> 
                 <!-- Add more project links here -->
             </ul>
         </div>
